Bizfi Production/src/objects/Volume_Bonus_Tier__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Volume Bonus Tiers</relationshipLabel>
        <relationshipName>Volume_Bonus_Tiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bonus_Payout__c</fullName>
        <label>Bonus Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Booking_Rate__c</fullName>
        <label>Max Booking Rate %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Volume_Amount__c</fullName>
        <label>Max Volume Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Booking_Rate__c</fullName>
        <label>Min Booking Rate %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Min_Volume_Amount__c</fullName>
        <label>Min Volume Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>All Deals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Deals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>Volume Bonus Tier History</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <label>Volume Bonus Tier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bank__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VBT-{000000}</displayFormat>
        <label>Volume Bonus Tier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Bonus Tiers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>